[project]
name = "obsidian-publish"
version = "0.1.0"
description = ""
authors = [
    {name = "The Lady of Pain",email = "ladyofpain@mynest.love"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs-publisher (>=1.4.8,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
